finish about me section

--- a/index.html
+++ b/index.html
@@ -9,8 +9,39 @@
   <body>
     <header>
       <div class="about">
-        <div class="aboutImage"></div>
-        <div class="aboutContent"></div>
+        <div class="aboutImage">
+          <img alt="Dachshund" src="images/dachshund.jpg" />
+          <h1>Dachshund</h1>
+        </div>
+        <div class="aboutContent">
+          <h2>About Me</h2>
+          <p>
+            Hi there! I'm a spirited dachshund with a nose for adventure and a
+            heart full of love. From sniffing out hidden treasures in the
+            backyard to chasing squirrels, I'm always on the go. When I'm not
+            busy being the best cuddle buddy, you can find me enjoying gourmet
+            treats or perfecting my burrowing technique. Whether it's a lazy day
+            in the sun or a thrilling game of fetch, life is never dull when
+            you're a dachshund like me. Ready to join me on my next escapade?
+            Let's make some paw-some memories together!
+          </p>
+          <div class="social">
+            <img
+              alt="Github"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+            />
+
+            <img
+              alt="Linkedin"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+            />
+
+            <img
+              alt="Twitter or X"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+            />
+          </div>
+        </div>
       </div>
     </header>
     <main>
