finish work section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,142 @@
       </div>
     </header>
     <main>
-      <div class="projectsList"></div>
+      <div class="projects">
+        <h3>My work</h3>
+        <div class="projectsList">
+          <div class="projectCard">
+            <img
+              class="projectImg"
+              alt="Project Screenshot"
+              src="images/playing.jpg"
+            />
+            <div class="projectText">
+              <h4>Playing with a ball</h4>
+              <div class="links">
+                <img
+                  alt="Github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                />
+                <img alt="Open in new" src="icons/open-in-new.svg" />
+              </div>
+              <p>
+                A gorgeous dachshund pup, playing with a ball. It's only 4
+                months here. So cute!
+              </p>
+            </div>
+          </div>
+
+          <div class="projectCard">
+            <img
+              class="projectImg"
+              alt="Project Screenshot"
+              src="images/friend.jpg"
+            />
+            <div class="projectText">
+              <h4>Meeting a friend</h4>
+              <div class="links">
+                <img
+                  alt="Github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                />
+                <img alt="Open in new" src="icons/open-in-new.svg" />
+              </div>
+              <p>
+                Little dachshund is meeting a friend pug. Dachshunds are so
+                friendly, that's awesome!
+              </p>
+            </div>
+          </div>
+
+          <div class="projectCard">
+            <img
+              class="projectImg"
+              alt="Project Screenshot"
+              src="images/stretching.jpg"
+            />
+            <div class="projectText">
+              <h4>Stretching</h4>
+              <div class="links">
+                <img
+                  alt="Github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                />
+                <img alt="Open in new" src="icons/open-in-new.svg" />
+              </div>
+              <p>
+                Oh, look at that sausage. Stretching after a long walk and
+                playing with friends.
+              </p>
+            </div>
+          </div>
+
+          <div class="projectCard">
+            <img
+              class="projectImg"
+              alt="Project Screenshot"
+              src="images/stick.jpg"
+            />
+            <div class="projectText">
+              <h4>A new stick</h4>
+              <div class="links">
+                <img
+                  alt="Github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                />
+                <img alt="Open in new" src="icons/open-in-new.svg" />
+              </div>
+              <p>
+                What a good boy or girl! Not every dog can find a perfect stick
+                like this.
+              </p>
+            </div>
+          </div>
+
+          <div class="projectCard">
+            <img
+              class="projectImg"
+              alt="Project Screenshot"
+              src="images/dressing.jpg"
+            />
+            <div class="projectText">
+              <h4>Dressing like a princess</h4>
+              <div class="links">
+                <img
+                  alt="Github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                />
+                <img alt="Open in new" src="icons/open-in-new.svg" />
+              </div>
+              <p>
+                Everyone wants to be a princess for one day. This patient
+                dachshund is doing an amazing job!
+              </p>
+            </div>
+          </div>
+
+          <div class="projectCard">
+            <img
+              class="projectImg"
+              alt="Project Screenshot"
+              src="images/running.jpg"
+            />
+            <div class="projectText">
+              <h4>Running</h4>
+              <div class="links">
+                <img
+                  alt="Github"
+                  src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+                />
+                <img alt="Open in new" src="icons/open-in-new.svg" />
+              </div>
+              <p>
+                Look at how fast this dachshund is! Having that small legs, it's
+                running like a pro! What a good boy or girl
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="contact">
