--- a/index.html
+++ b/index.html
@@ -184,8 +184,44 @@
     </main>
     <footer>
       <div class="contact">
-        <div class="contactContent"></div>
-        <div class="contactImage"></div>
+        <div class="contactText">
+          <h5>Contact me</h5>
+          <p>
+            If you're looking for a loyal, loving, and endlessly entertaining
+            companion, then look no further!
+          </p>
+          <p>1234 Random Road Random Town, California 12345</p>
+          <div class="contactInfo">
+            <div class="contactType">
+              <img src="icons/call.svg" alt="call" />
+              <p>111-111-1111</p>
+            </div>
+            <div class="contactType">
+              <img src="icons/mail.svg" alt="mail" />
+              <p>cutedoggie@doggo.com</p>
+            </div>
+          </div>
+
+          <div class="contactSocial">
+            <img
+              alt="Github"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg"
+            />
+
+            <img
+              alt="Linkedin"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+            />
+
+            <img
+              alt="Twitter or X"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+            />
+          </div>
+        </div>
+        <div class="contactImage">
+          <img alt="Dachshund" src="images/contact.jpg" />
+        </div>
       </div>
     </footer>
   </body>
